# digital-footprint-dump

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: monthly-pipeline.yml  schwab-sync.yml  tests.yml
data/: readwise_analysis.csv
docs/: PODCAST_DURATION.md  REFACTOR_V1.md  SOURCES.md  SUMMARY.md  TODO.md  openapi-1.34.json  schwab_api.txt
src/: README.md  api_client.py  comparison.py  config.py  database.py  sync.py  time_utils.py
src/apple_health/: __init__.py  models.py  (+3 more)
tests/: test_analysis_table_ownership.py  test_apple_health_analytics.py  test_apple_health_importer.py  test_blog_analytics.py  test_blog_sync.py  test_cloud_config.py  test_comparison.py  test_data_generator.py  test_foursquare_client.py  test_foursquare_redirect.py  test_foursquare_security.py  test_github_client.py  test_github_sync.py  test_hardcover_sync_performance.py  test_hardcover_timeout.py  test_letterboxd_database.py  test_letterboxd_importer.py  test_letterboxd_performance_optimized.py  test_letterboxd_rss_syncer.py  test_letterboxd_tmdb_client.py  test_main_refactor.py  test_markdown_generator.py  test_overcast_database.py  test_overcast_duration.py  test_overcast_importer.py  test_overcast_importer_security.py  test_overcast_rss_fetcher.py  test_publish_github_client.py  test_publisher.py  test_readwise_client.py  test_readwise_client_security.py  test_readwise_database.py  test_readwise_sync.py  test_schwab_analytics.py  test_schwab_sync.py
(+66 files in other folders)
